--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,6 @@ script:
 # page of your repository and then change the 
 # environment in the settings pannel.
 after_success:
-  - './.travis/build.sh -p'
-
+ - if [ -n "$DOCKER_USERNAME" -a -n "$DOCKER_PASSWORD" ]; then
+      echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin ;
+      ./.travis/build-docker.sh -p;
