--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ script:
 after_success:
  - if [ -n "$DOCKER_USERNAME" -a -n "$DOCKER_PASSWORD" ]; then
       echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin;
-      ./.travis/build-docker.sh -p;
+      ./.travis/build.sh -p;
    fi
