removed after_success

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
 # and then `travis set ..` or go to the travis
 # page of your repository and then change the 
 # environment in the settings pannel.
-after_success:
+#after_success:
  - if [ -n "$DOCKER_USERNAME" -a -n "$DOCKER_PASSWORD" ]; then
       echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin;
       ./.travis/build.sh -p;
