--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,11 @@ services:
 #before_install:
   #- './.travis/main.sh'
   
-script:
-  - './.travis/build.sh -b'
-  - if [ -n "$DOCKER_USERNAME" -a -n "$DOCKER_PASSWORD" ]; then
-      echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin;
-      ./.travis/build.sh -p;
-    fi
+script:  './.travis/build.sh -b' && \
+if [ -n "$DOCKER_USERNAME" -a -n "$DOCKER_PASSWORD" ]; then
+  echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin;
+  ./.travis/build.sh -p;
+fi
 
 # only execute the following instructions in
 # the case of a success (failing at this point
