--- a/.travis.yml
+++ b/.travis.yml
@@ -13,21 +13,19 @@ services:
 # installation scripts
 #before_install:
   #- './.travis/main.sh'
-  
-script:  './.travis/build.sh -b' && \
-if [ -n "$DOCKER_USERNAME" -a -n "$DOCKER_PASSWORD" ]; then
-  echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin;
-  ./.travis/build.sh -p;
-fi
 
-# only execute the following instructions in
-# the case of a success (failing at this point
-# won't mark the build as a failure).
+# combine the script commands to only run the 2nd command
+# if the first command succeeeds.
 
 
 # To have `DOCKER_USERNAME` and `DOCKER_PASSWORD`
 # filled you need to either use `travis`' cli 
 # and then `travis set ..` or go to the travis
 # page of your repository and then change the 
-# environment in the settings pannel.
-#after_success:
+# environment in the settings pannel.  
+
+script:  './.travis/build.sh -b' && \
+if [ -n "$DOCKER_USERNAME" -a -n "$DOCKER_PASSWORD" ]; then
+  echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin;
+  ./.travis/build.sh -p;
+fi
