--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,16 @@ language: ruby
 #git:
   #depth: false
 
-install:
-  - git fetch --unshallow --tags
 
 # have the docker service set up (we'll
 # update it later)
 services:
   - 'docker'
 
-
+install:
+  - git config remote.origin.fetch +refs/heads/*:refs/remotes/origin/*
+  - git fetch --unshallow --tags
+  - git symbolic-ref --short HEAD || git checkout -b ${TRAVIS_BRANCH}-test $TRAVIS_BRANCH
 
 script:
   - './.travis/build.sh -b'
