--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,7 @@ jobs:
           echo "${GITHUB_REF#refs/heads/}"
           echo " "
           echo ${GITHUB_REF##*/}
+          TAG="${GITHUB_REF#refs/heads/}"
+          TAG="${GITHUB_REF#refs/tags/}"
+          TAG="${TAG//\//_}"
+          echo "TAG: $TAG"
